# bibliometrics-of-german-law-journals

./: .env.dist  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/comparisons/: groels+groels-(2009)_jura-forum.de.txt  groels+groels-(2009)_jura-recherche.de.txt  groels+groels-(2009)_juris-(2002).txt  groels+groels-(2009)_openjur.de.txt  groels+groels-(2009)_wikipedia.txt  jura-forum.de_jura-recherche.de.txt  jura-forum.de_juris-(2002).txt  jura-forum.de_openjur.de.txt  jura-forum.de_wikipedia.txt  jura-recherche.de_juris-(2002).txt  jura-recherche.de_openjur.de.txt  jura-recherche.de_wikipedia.txt  juris-(2002)_openjur.de.txt  juris-(2002)_wikipedia.txt  lists-issns.csv  openjur.de_wikipedia.txt
data/gold/: gold-groels-groels-2009.csv  jura_groels_tabelle1_allg_zeitschriften.csv
data/web_lists/: jura-forum.de-2024-12-13.csv  jura-recherche.de-2024-12-13.csv  juris-ingested-journals-2002.csv  juris-ingested-journals-2002.json  (+7 more)
docs/: .gitignore  paper.html  paper.qmd  references.bib
lib/: crossref.py  intersections.py  lobid.py  visualizations.py  wikidata.py
notebooks/: article-sql-scripts.ipynb  evaluations_rewi_create basic_tables.ipynb  evaluations_rewi_journal_lists.ipynb  paper.ipynb  rewi-journal-gold-standard.ipynb  rewi-journals-compare-lists.ipynb  rewi-journals-internet-lists.ipynb  rewi-journals-wikidata.ipynb  rewi-journals-wikipedia.ipynb  rewi-journals-zdb.ipynb  rewi_version_statistics.ipynb
scripts/: convert-jsonl-to-csv.sh  download-lobid-law-issn.sh  generate-article-html  kb-data-transformations.rmd  patch-img-size.py
(+61 files in other folders)
