[project]
name = "bibliometrics-of-german-law-journals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipywidgets>=8.1.6",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandasql>=0.7.3",
    "python-dotenv>=1.1.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "venny4py>=1.0.3",
    "wordcloud>=1.9.4",
]
